@@ -6,6 +6,7 @@ Changelog
 ---------------------
 
 - Unify Bumblebee URLs on REST API for document vs. document on a listing. [Rotonen]
+- Make sure all workflow IDs are unique. [njohner]
 
 
 2019.1.1 (2019-02-26)
